add attribute set for BannerView

--- a/demo/src/main/res/layout/activity_horizontal.xml
+++ b/demo/src/main/res/layout/activity_horizontal.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,7 +9,9 @@
     <com.jimmysun.ultrarecyclerview.BannerView
         android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="150dp"
+        app:alignGravity="center"
+        app:infiniteLoop="true"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
